day24/chip_nlb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chip

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chip
  name: chip
  namespace: chip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chip
  template:
    metadata:       
      labels:
        app: chip
        name: chip
        version: v1
    spec:

      # Topology Spread about avaliability zone
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: chip

        - maxSkew: 1
          topologyKey: "node.kubernetes.io/instance-type"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: chip

      containers:
      - name: chip
        image: fidelissauro/chip:v1
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /readiness
            port: 8080
          periodSeconds: 10
        livenessProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: Custom-Header
              value: Awesome
            path: /liveness
            port: 8080
          periodSeconds: 10
      terminationGracePeriodSeconds: 60

#
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/service/nlb/
#
---
apiVersion: v1
kind: Service
metadata:
  name: chip
  namespace: chip
  labels:
    app.kubernetes.io/name: chip
    app.kubernetes.io/instance: chip
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: "chip-nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "TCP"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "8080"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "20" 
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "5" 
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "3" 
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "3" 
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip" 
    # service.beta.kubernetes.io/aws-load-balancer-subnets:  "" # using auto-discovery
    service.beta.kubernetes.io/aws-load-balancer-attributes: "load_balancing.cross_zone.enabled=true"
    service.beta.kubernetes.io/load-balancer-source-ranges: "YOUR.PUBLIC.IP.ADDRESS/32" # limit access ( comma separated cidrs )
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: chip
  type: LoadBalancer
